# NOSTIC-7

./: README.md  TECHNICAL_DESIGN.md  pyproject.toml
.github/workflows/: deploy.yml
examples/: quickstart.py
nostic7/: __init__.py  core.py
nostic7/engines/: __init__.py  arche_tempus.py  infinigen.py  mrsc_plus.py  mythos_weaver.py
nostic7/epinoetic/: __init__.py  core.py  ledger.py  polyethical.py
nostic7/manifolds/: __init__.py  circle.py  heptagon.py  hexagon.py  pentagon.py  projection.py  square.py  triangle.py
nostic7/omega_stack/: __init__.py  echo_node.py  hqci.py
nostic7/pipeline/: __init__.py  cycle.py
tests/: __init__.py  test_manifolds.py  test_pipeline.py
