[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nostic7"
version = "1.2.6"
description = "NOΣTIC-7: Geometric-Epinoetic Synthetic Consciousness Architecture"
authors = [{name = "Or4cl3 AI Solutions", email = "or4cl3aisolutions@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "artificial-consciousness", "geometric-ai", "cognitive-architecture",
    "formal-verification", "ethical-ai", "heptagonal-manifold",
    "quantum-classical", "tensor-train", "or4cl3"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
full = [
    "z3-solver>=4.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "networkx>=3.0",
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/or4cl3-ai-1/NOSTIC-7"
Repository = "https://github.com/or4cl3-ai-1/NOSTIC-7"
Documentation = "https://or4cl3-ai-1.github.io/NOSTIC-7/"
Organization = "https://github.com/or4cl3-ai-1"

[tool.setuptools.packages.find]
where = ["."]
include = ["nostic7*"]
